# 3_BoW_Paulie

./: CMakeLists.txt  README.md
include/: main.hpp
lib/: CMakeLists.txt
lib/bow/include/: bow.hpp  kmeans.hpp
lib/bow/src/: bow.cpp  kmeans.cpp
lib/html_writer/src/: html_writer.cpp
lib/image_browser/include/: image_browser.hpp
lib/image_browser/src/: image_browser.cpp
lib/serialization/include/: convert_dataset.hpp  serialize.hpp
lib/serialization/src/: convert_dataset.cpp  serialize.cpp
src/: main.cpp
